--- a/development/digital-ocean-deploy/index.html
+++ b/development/digital-ocean-deploy/index.html
@@ -19,7 +19,7 @@ Minimal example #  This is just an example of a button, my project is not config
 <link rel=icon href=/hugo-shortcodes/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hugo-shortcodes/book.min.d70bdb65ccda2b961319db5f7c38031a3ce97bd1b7ffe23c19c5065392e65fc8.css integrity="sha256-1wvbZczaK5YTGdtffDgDGjzpe9G3/+I8GcUGU5LmX8g=" crossorigin=anonymous>
 <script defer src=/hugo-shortcodes/flexsearch.min.js></script>
-<script defer src=/hugo-shortcodes/en.search.min.cfb12f337b8e25a1d63e4c7ac14c41f31838984657de4de3e88607fb91ee197c.js integrity="sha256-z7EvM3uOJaHWPkx6wUxB8xg4mEZX3k3j6IYH+5HuGXw=" crossorigin=anonymous></script>
+<script defer src=/hugo-shortcodes/en.search.min.02bd627003f0c23d842fda26f3568b585eaed45798a389b5d8a614ecc14b1a18.js integrity="sha256-Ar1icAPwwj2EL9om81aLWF6u1FeYo4m12KYU7MFLGhg=" crossorigin=anonymous></script>
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -102,6 +102,7 @@ Minimal example #  This is just an example of a button, my project is not config
 <li><a href=#minimal-example>Minimal example</a></li>
 <li><a href=#full-example>Full example</a></li>
 <li><a href=#parameters>Parameters</a></li>
+<li><a href=#site-parameters>Site Parameters</a></li>
 <li><a href=#installation>Installation</a></li>
 </ul>
 </nav>
@@ -185,7 +186,29 @@ Parameters
 </tr>
 </tbody>
 </table>
-<h2 id=installation>
+<h2 id=site-parameters>
+Site Parameters
+<a class=anchor href=#site-parameters>#</a>
+</h2>
+<p>You can set defaults in Site Parameters. For <code>config.toml</code>:</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-toml data-lang=toml>[<span style=color:#a6e22e>params</span>.<span style=color:#a6e22e>HugoShortcodes</span>.<span style=color:#a6e22e>DigitalOcean</span>]
+    <span style=color:#a6e22e>RefCode</span> = <span style=color:#e6db74>&#39;your_referral_code&#39;</span>
+    <span style=color:#a6e22e>BadgeTheme</span> = <span style=color:#e6db74>&#39;blue&#39;</span>
+[<span style=color:#a6e22e>params</span>.<span style=color:#a6e22e>HugoShortcodes</span>.<span style=color:#a6e22e>Github</span>]
+    <span style=color:#a6e22e>Owner</span> = <span style=color:#e6db74>&#39;your_github_login_or_org_name&#39;</span>
+    <span style=color:#a6e22e>Repository</span> = <span style=color:#e6db74>&#39;your_repository_name&#39;</span>
+    <span style=color:#a6e22e>Branch</span> = <span style=color:#e6db74>&#39;default_branch&#39;</span>
+</code></pre></div><p>For <code>config.yaml</code>:</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-yaml data-lang=yaml><span style=color:#f92672>params</span>:
+  <span style=color:#f92672>HugoShortcodes</span>:
+    <span style=color:#f92672>DigitalOcean</span>:
+      <span style=color:#f92672>RefCode</span>: <span style=color:#ae81ff>your_referral_code</span>
+      <span style=color:#f92672>BadgeTheme</span>: <span style=color:#ae81ff>blue</span>
+    <span style=color:#f92672>Github</span>:
+      <span style=color:#f92672>Owner</span>: <span style=color:#ae81ff>your_github_login_or_org_name</span>
+      <span style=color:#f92672>Repository</span>: <span style=color:#ae81ff>your_repository_name</span>
+      <span style=color:#f92672>Branch</span>: <span style=color:#ae81ff>default_branch</span>
+</code></pre></div><h2 id=installation>
 Installation
 <a class=anchor href=#installation>#</a>
 </h2>
@@ -238,6 +261,7 @@ Installation
 <li><a href=#minimal-example>Minimal example</a></li>
 <li><a href=#full-example>Full example</a></li>
 <li><a href=#parameters>Parameters</a></li>
+<li><a href=#site-parameters>Site Parameters</a></li>
 <li><a href=#installation>Installation</a></li>
 </ul>
 </nav>
