--- a/content/highlighter/index.html
+++ b/content/highlighter/index.html
@@ -5,25 +5,25 @@
 <meta name=description content="Hugo Shortcode for Text Highlight #  This shortcode allows you to highlight some text inside a paragraph.
 Minimal example #  Highlight absolutely any words you want.
 Code:
-Highlight {{< highlight >}}absolutely{{</ highlight >}} any words you want. Full example #  Highlight absolutely any words you want.
+Highlight {{< highlighter >}}absolutely{{</ highlighter >}} any words you want. Full example #  Highlight absolutely any words you want.
 Code:
-Highlight {{< highlight color=&#34;lime&#34; >}}absolutely **any** words {{</ highlight >}} you want. Parameters #     Parameter Default Description     color yellow The color to highlight text   inner text — The text (markdown) to highlight    Installation #  Don’t forget to install shortcode before usage.">
+Highlight {{< highlighter color=&#34;lime&#34; >}}absolutely **any** words {{</ highlighter >}} you want. Parameters #     Parameter Default Description     color yellow The color to highlight text   inner text — The text (markdown) to highlight    Installation #  Don’t forget to install shortcode before usage.">
 <meta name=theme-color content="#FFFFFF">
 <meta name=color-scheme content="light dark"><meta property="og:title" content="Text Highlight">
 <meta property="og:description" content="Hugo Shortcode for Text Highlight #  This shortcode allows you to highlight some text inside a paragraph.
 Minimal example #  Highlight absolutely any words you want.
 Code:
-Highlight {{< highlight >}}absolutely{{</ highlight >}} any words you want. Full example #  Highlight absolutely any words you want.
+Highlight {{< highlighter >}}absolutely{{</ highlighter >}} any words you want. Full example #  Highlight absolutely any words you want.
 Code:
-Highlight {{< highlight color=&#34;lime&#34; >}}absolutely **any** words {{</ highlight >}} you want. Parameters #     Parameter Default Description     color yellow The color to highlight text   inner text — The text (markdown) to highlight    Installation #  Don’t forget to install shortcode before usage.">
+Highlight {{< highlighter color=&#34;lime&#34; >}}absolutely **any** words {{</ highlighter >}} you want. Parameters #     Parameter Default Description     color yellow The color to highlight text   inner text — The text (markdown) to highlight    Installation #  Don’t forget to install shortcode before usage.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://isqua.github.io/hugo-shortcodes/content/highlight/"><meta property="article:section" content="content">
+<meta property="og:url" content="https://isqua.github.io/hugo-shortcodes/content/highlighter/"><meta property="article:section" content="content">
 <title>Text Highlight | Curated Hugo Shortcodes Collection</title>
 <link rel=manifest href=/hugo-shortcodes/manifest.json>
 <link rel=icon href=/hugo-shortcodes/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hugo-shortcodes/book.min.d70bdb65ccda2b961319db5f7c38031a3ce97bd1b7ffe23c19c5065392e65fc8.css integrity="sha256-1wvbZczaK5YTGdtffDgDGjzpe9G3/+I8GcUGU5LmX8g=" crossorigin=anonymous>
 <script defer src=/hugo-shortcodes/flexsearch.min.js></script>
-<script defer src=/hugo-shortcodes/en.search.min.02bd627003f0c23d842fda26f3568b585eaed45798a389b5d8a614ecc14b1a18.js integrity="sha256-Ar1icAPwwj2EL9om81aLWF6u1FeYo4m12KYU7MFLGhg=" crossorigin=anonymous></script>
+<script defer src=/hugo-shortcodes/en.search.min.d404651992a5ffa614ed693f5696e3957c0ef3d9b278a1f4c89c8ff182580599.js integrity="sha256-1ARlGZKl/6YU7Wk/VpbjlXwO89myeKH0yJyP8YJYBZk=" crossorigin=anonymous></script>
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -46,7 +46,7 @@ Highlight {{< highlight color=&#34;lime&#34; >}}absolutely **any** words {{</ hi
 <span>Content</span>
 <ul>
 <li>
-<a href=https://isqua.github.io/hugo-shortcodes/content/highlight/ class=active>Text Highlight</a>
+<a href=https://isqua.github.io/hugo-shortcodes/content/highlighter/ class=active>Text Highlight</a>
 </li>
 <li>
 <a href=https://isqua.github.io/hugo-shortcodes/content/unsafe-html/>Unsafe HTML</a>
@@ -124,7 +124,7 @@ Minimal example
 <mark>absolutely</mark>
 any words you want.</p>
 <p>Code:</p>
-<pre tabindex=0><code>Highlight {{&lt; highlight &gt;}}absolutely{{&lt;/ highlight &gt;}} any words you want.
+<pre tabindex=0><code>Highlight {{&lt; highlighter &gt;}}absolutely{{&lt;/ highlighter &gt;}} any words you want.
 </code></pre><h2 id=full-example>
 Full example
 <a class=anchor href=#full-example>#</a>
@@ -133,7 +133,7 @@ Full example
 <mark style=background-color:lime>absolutely <strong>any</strong> words</mark>
 you want.</p>
 <p>Code:</p>
-<pre tabindex=0><code>Highlight {{&lt; highlight color=&quot;lime&quot; &gt;}}absolutely **any** words {{&lt;/ highlight &gt;}} you want.
+<pre tabindex=0><code>Highlight {{&lt; highlighter color=&quot;lime&quot; &gt;}}absolutely **any** words {{&lt;/ highlighter &gt;}} you want.
 </code></pre><h2 id=parameters>
 Parameters
 <a class=anchor href=#parameters>#</a>
@@ -183,7 +183,7 @@ Installation
 <summary>Install only current shortcode</summary>
 <p>If you need only one shortcode or installing a theme is too complicated, you may get it easier.</p>
 <ul>
-<li>First, <a href=https://raw.githubusercontent.com/isqua/hugo-shortcodes/main/themes/hugo-shortcodes/layouts/shortcodes/highlight.html download=highlight.html>download shortcode file.</a></li>
+<li>First, <a href=https://raw.githubusercontent.com/isqua/hugo-shortcodes/main/themes/hugo-shortcodes/layouts/shortcodes/highlighter.html download=highlighter.html>download shortcode file.</a></li>
 <li>Put the file into your <code>layouts/shortcodes</code> folder.</li>
 </ul>
 <p>That’s it! If your hugo server is running, it is better to restart it to avoid unexpected behavior.</p>
@@ -194,7 +194,7 @@ Installation
 <footer class=book-footer>
 <div class="flex flex-wrap justify-between">
 <div>
-<a class="flex align-center" href=https://github.com/isqua/hugo-shortcodes/edit/main/content/content/highlight/index.md target=_blank rel=noopener>
+<a class="flex align-center" href=https://github.com/isqua/hugo-shortcodes/edit/main/content/content/highlighter/index.md target=_blank rel=noopener>
 <img src=/hugo-shortcodes/svg/edit.svg class=book-icon alt=Edit>
 <span>Edit this page</span>
 </a>
