deploy: ab32654771f920a279dc3196db3a831993ba9149

--- a/links/tel/index.html
+++ b/links/tel/index.html
@@ -19,7 +19,7 @@ Minimal example #  For minimum usage you have to specify phone number: +44791112
 <link rel=icon href=/hugo-shortcodes/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hugo-shortcodes/book.min.d70bdb65ccda2b961319db5f7c38031a3ce97bd1b7ffe23c19c5065392e65fc8.css integrity="sha256-1wvbZczaK5YTGdtffDgDGjzpe9G3/+I8GcUGU5LmX8g=" crossorigin=anonymous>
 <script defer src=/hugo-shortcodes/flexsearch.min.js></script>
-<script defer src=/hugo-shortcodes/en.search.min.d404651992a5ffa614ed693f5696e3957c0ef3d9b278a1f4c89c8ff182580599.js integrity="sha256-1ARlGZKl/6YU7Wk/VpbjlXwO89myeKH0yJyP8YJYBZk=" crossorigin=anonymous></script>
+<script defer src=/hugo-shortcodes/en.search.min.f5ef658638da05b0a64fb2092a25f68ac770f33fbbcb8795d85dd12a852c0c27.js integrity="sha256-9e9lhjjaBbCmT7IJKiX2isdw8z+7y4eV2F3RKoUsDCc=" crossorigin=anonymous></script>
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -77,6 +77,14 @@ Minimal example #  For minimum usage you have to specify phone number: +44791112
 </li>
 <li>
 <a href=https://isqua.github.io/hugo-shortcodes/links/sms/>SMS-to-Phone</a>
+</li>
+</ul>
+</li>
+<li class=book-section-flat>
+<span>Purchases</span>
+<ul>
+<li>
+<a href=https://isqua.github.io/hugo-shortcodes/purchases/gumroad-button/>Gumroad</a>
 </li>
 </ul>
 </li>
