--- a/purchases/index.html
+++ b/purchases/index.html
@@ -4,17 +4,17 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content>
 <meta name=theme-color content="#FFFFFF">
-<meta name=color-scheme content="light dark"><meta property="og:title" content="Categories">
+<meta name=color-scheme content="light dark"><meta property="og:title" content="Purchases">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://isqua.github.io/hugo-shortcodes/categories/">
-<title>Categories | Curated Hugo Shortcodes Collection</title>
+<meta property="og:url" content="https://isqua.github.io/hugo-shortcodes/purchases/">
+<title>Purchases | Curated Hugo Shortcodes Collection</title>
 <link rel=manifest href=/hugo-shortcodes/manifest.json>
 <link rel=icon href=/hugo-shortcodes/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hugo-shortcodes/book.min.d70bdb65ccda2b961319db5f7c38031a3ce97bd1b7ffe23c19c5065392e65fc8.css integrity="sha256-1wvbZczaK5YTGdtffDgDGjzpe9G3/+I8GcUGU5LmX8g=" crossorigin=anonymous>
 <script defer src=/hugo-shortcodes/flexsearch.min.js></script>
 <script defer src=/hugo-shortcodes/en.search.min.f5ef658638da05b0a64fb2092a25f68ac770f33fbbcb8795d85dd12a852c0c27.js integrity="sha256-9e9lhjjaBbCmT7IJKiX2isdw8z+7y4eV2F3RKoUsDCc=" crossorigin=anonymous></script>
-<link rel=alternate type=application/rss+xml href=https://isqua.github.io/hugo-shortcodes/categories/index.xml title="Curated Hugo Shortcodes Collection">
+<link rel=alternate type=application/rss+xml href=https://isqua.github.io/hugo-shortcodes/purchases/index.xml title="Curated Hugo Shortcodes Collection">
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -94,30 +94,24 @@
 <label for=menu-control>
 <img src=/hugo-shortcodes/svg/menu.svg class=book-icon alt=Menu>
 </label>
-<strong>Categories</strong>
+<strong>Purchases</strong>
 <label for=toc-control>
 <img src=/hugo-shortcodes/svg/toc.svg class=book-icon alt="Table of Contents">
 </label>
 </div>
 <aside class="hidden clearfix">
-<nav>
-<ul>
-<li class=book-section-flat>
-<strong>Categories</strong>
-<ul>
-</ul>
-</li>
-<li class=book-section-flat>
-<strong>Tags</strong>
-<ul>
-</ul>
-</li>
-</ul>
-</nav>
+<nav id=TableOfContents></nav>
 </aside>
 </header>
+<article class=markdown></article>
 <footer class=book-footer>
 <div class="flex flex-wrap justify-between">
+<div>
+<a class="flex align-center" href=https://github.com/isqua/hugo-shortcodes/edit/main/content/purchases/_index.md target=_blank rel=noopener>
+<img src=/hugo-shortcodes/svg/edit.svg class=book-icon alt=Edit>
+<span>Edit this page</span>
+</a>
+</div>
 </div>
 <script>(function(){function a(c){const a=window.getSelection(),b=document.createRange();b.selectNodeContents(c),a.removeAllRanges(),a.addRange(b)}document.querySelectorAll("pre code").forEach(b=>{b.addEventListener("click",function(c){a(b.parentElement),navigator.clipboard&&navigator.clipboard.writeText(b.parentElement.textContent)})})})()</script>
 <iframe src="https://ghbtns.com/github-btn.html?user=isqua&repo=hugo-shortcodes&type=star&count=true&size=large" frameborder=0 scrolling=0 width=170 height=30 title="Star Hugo Shortcodes"></iframe>
@@ -126,20 +120,7 @@
 </div>
 <aside class=book-toc>
 <div class=book-toc-content>
-<nav>
-<ul>
-<li class=book-section-flat>
-<strong>Categories</strong>
-<ul>
-</ul>
-</li>
-<li class=book-section-flat>
-<strong>Tags</strong>
-<ul>
-</ul>
-</li>
-</ul>
-</nav>
+<nav id=TableOfContents></nav>
 </div>
 </aside>
 </main>
