deploy: 92b8cea3ecd43eb7796ea31b9061b1885f46d336

--- a/development/github-buttons/index.html
+++ b/development/github-buttons/index.html
@@ -21,7 +21,7 @@ Minimal example #  By default it shows a small star button with a stars counter 
 <link rel=icon href=/hugo-shortcodes/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hugo-shortcodes/book.min.d70bdb65ccda2b961319db5f7c38031a3ce97bd1b7ffe23c19c5065392e65fc8.css integrity="sha256-1wvbZczaK5YTGdtffDgDGjzpe9G3/+I8GcUGU5LmX8g=" crossorigin=anonymous>
 <script defer src=/hugo-shortcodes/flexsearch.min.js></script>
-<script defer src=/hugo-shortcodes/en.search.min.f5ef658638da05b0a64fb2092a25f68ac770f33fbbcb8795d85dd12a852c0c27.js integrity="sha256-9e9lhjjaBbCmT7IJKiX2isdw8z+7y4eV2F3RKoUsDCc=" crossorigin=anonymous></script>
+<script defer src=/hugo-shortcodes/en.search.min.915a584e926092e2c194494da3aa8541ef5ff9f4ec106c820d257bdcdba46dd4.js integrity="sha256-kVpYTpJgkuLBlElNo6qFQe9f+fTsEGyCDSV73NukbdQ=" crossorigin=anonymous></script>
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -54,6 +54,9 @@ Minimal example #  By default it shows a small star button with a stars counter 
 <li class=book-section-flat>
 <span>Development</span>
 <ul>
+<li>
+<a href=https://isqua.github.io/hugo-shortcodes/development/asciicast/>ASCII Cast from asciinema</a>
+</li>
 <li>
 <a href=https://isqua.github.io/hugo-shortcodes/development/codepen/>Codepen</a>
 </li>
