--- a/development/asciicast/index.html
+++ b/development/asciicast/index.html
@@ -2,21 +2,23 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="Hugo Shortcode for SMS-to-Phone Link #  When you click on SMS-to-Phone link, your mobile phone or device will open the SMS draft to the specified number.
-Read more about this feature in RFC 5724.
-Minimal example #  For minimum usage you have to specify phone number: +447911123456 Code:
-{{< sms number=&#34;+447911123456&#34; />}} Full example #  You can change text of the link: text me Code:
-{{< sms number=&#34;+447911123456&#34; >}}text me{{</ sms >}} Parameters #     Parameter Default Description     number — The phone number to call.">
+<meta name=description content="Hugo Shortcode for asciinema cast #  Embed any casts from asciinema to demonstrate your terminal sessions or any cli app.
+Minimal example #  Here is a simple cast recorded with asciinema:
+ Code:
+{{< asciicast id=&#34;AyrL49ZCvbvICGRmMT8Q9rz5B&#34; >}} Full example #  With parameters you can override speed, theme, etc.
+ Code:
+{{< asciicast id=&#34;AyrL49ZCvbvICGRmMT8Q9rz5B&#34; theme=&#34;monokai&#34; startAt=&#34;10&#34; speed=&#34;3&#34; loop=true autoplay=true columns=&#34;90&#34; rows=&#34;10&#34; >}} Parameters #     Parameter Default Description     id — ID of your cast.">
 <meta name=theme-color content="#FFFFFF">
-<meta name=color-scheme content="light dark"><meta property="og:title" content="SMS-to-Phone">
-<meta property="og:description" content="Hugo Shortcode for SMS-to-Phone Link #  When you click on SMS-to-Phone link, your mobile phone or device will open the SMS draft to the specified number.
-Read more about this feature in RFC 5724.
-Minimal example #  For minimum usage you have to specify phone number: +447911123456 Code:
-{{< sms number=&#34;+447911123456&#34; />}} Full example #  You can change text of the link: text me Code:
-{{< sms number=&#34;+447911123456&#34; >}}text me{{</ sms >}} Parameters #     Parameter Default Description     number — The phone number to call.">
+<meta name=color-scheme content="light dark"><meta property="og:title" content="ASCII Cast from asciinema">
+<meta property="og:description" content="Hugo Shortcode for asciinema cast #  Embed any casts from asciinema to demonstrate your terminal sessions or any cli app.
+Minimal example #  Here is a simple cast recorded with asciinema:
+ Code:
+{{< asciicast id=&#34;AyrL49ZCvbvICGRmMT8Q9rz5B&#34; >}} Full example #  With parameters you can override speed, theme, etc.
+ Code:
+{{< asciicast id=&#34;AyrL49ZCvbvICGRmMT8Q9rz5B&#34; theme=&#34;monokai&#34; startAt=&#34;10&#34; speed=&#34;3&#34; loop=true autoplay=true columns=&#34;90&#34; rows=&#34;10&#34; >}} Parameters #     Parameter Default Description     id — ID of your cast.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://isqua.github.io/hugo-shortcodes/links/sms/"><meta property="article:section" content="links">
-<title>SMS-to-Phone | Curated Hugo Shortcodes Collection</title>
+<meta property="og:url" content="https://isqua.github.io/hugo-shortcodes/development/asciicast/"><meta property="article:section" content="development">
+<title>ASCII Cast from asciinema | Curated Hugo Shortcodes Collection</title>
 <link rel=manifest href=/hugo-shortcodes/manifest.json>
 <link rel=icon href=/hugo-shortcodes/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hugo-shortcodes/book.min.d70bdb65ccda2b961319db5f7c38031a3ce97bd1b7ffe23c19c5065392e65fc8.css integrity="sha256-1wvbZczaK5YTGdtffDgDGjzpe9G3/+I8GcUGU5LmX8g=" crossorigin=anonymous>
@@ -55,7 +57,7 @@ Minimal example #  For minimum usage you have to specify phone number: +44791112
 <span>Development</span>
 <ul>
 <li>
-<a href=https://isqua.github.io/hugo-shortcodes/development/asciicast/>ASCII Cast from asciinema</a>
+<a href=https://isqua.github.io/hugo-shortcodes/development/asciicast/ class=active>ASCII Cast from asciinema</a>
 </li>
 <li>
 <a href=https://isqua.github.io/hugo-shortcodes/development/codepen/>Codepen</a>
@@ -81,7 +83,7 @@ Minimal example #  For minimum usage you have to specify phone number: +44791112
 <a href=https://isqua.github.io/hugo-shortcodes/links/mailto/>Mail-To</a>
 </li>
 <li>
-<a href=https://isqua.github.io/hugo-shortcodes/links/sms/ class=active>SMS-to-Phone</a>
+<a href=https://isqua.github.io/hugo-shortcodes/links/sms/>SMS-to-Phone</a>
 </li>
 </ul>
 </li>
@@ -104,7 +106,7 @@ Minimal example #  For minimum usage you have to specify phone number: +44791112
 <label for=menu-control>
 <img src=/hugo-shortcodes/svg/menu.svg class=book-icon alt=Menu>
 </label>
-<strong>SMS-to-Phone</strong>
+<strong>ASCII Cast from asciinema</strong>
 <label for=toc-control>
 <img src=/hugo-shortcodes/svg/toc.svg class=book-icon alt="Table of Contents">
 </label>
@@ -115,35 +117,42 @@ Minimal example #  For minimum usage you have to specify phone number: +44791112
 <li><a href=#minimal-example>Minimal example</a></li>
 <li><a href=#full-example>Full example</a></li>
 <li><a href=#parameters>Parameters</a></li>
+<li><a href=#site-parameters>Site Parameters</a></li>
 <li><a href=#installation>Installation</a></li>
 </ul>
 </nav>
 </aside>
 </header>
-<article class=markdown><h1 id=hugo-shortcode-for-sms-to-phone-link>
-Hugo Shortcode for SMS-to-Phone Link
-<a class=anchor href=#hugo-shortcode-for-sms-to-phone-link>#</a>
+<article class=markdown><h1 id=hugo-shortcode-for-asciinema-cast>
+Hugo Shortcode for asciinema cast
+<a class=anchor href=#hugo-shortcode-for-asciinema-cast>#</a>
 </h1>
-<p>When you click on SMS-to-Phone link, your mobile phone or device will open the SMS draft to the specified number.</p>
-<p>Read more about this feature in <a href=https://datatracker.ietf.org/doc/html/rfc5724>RFC 5724</a>.</p>
+<p>Embed any casts from <a href=https://asciinema.org>asciinema</a> to demonstrate your terminal sessions or any cli app.</p>
 <h2 id=minimal-example>
 Minimal example
 <a class=anchor href=#minimal-example>#</a>
 </h2>
-<p>For minimum usage you have to specify phone number:
-<a href=sms:+447911123456>+447911123456</a>
-</p>
+<p>Here is a simple cast recorded with asciinema:</p>
+<script id=asciicast-AyrL49ZCvbvICGRmMT8Q9rz5B src=https://asciinema.org/a/AyrL49ZCvbvICGRmMT8Q9rz5B.js async></script>
 <p>Code:</p>
-<pre tabindex=0><code>{{&lt; sms number=&quot;+447911123456&quot; /&gt;}}
+<pre tabindex=0><code>{{&lt; asciicast id=&quot;AyrL49ZCvbvICGRmMT8Q9rz5B&quot; &gt;}}
 </code></pre><h2 id=full-example>
 Full example
 <a class=anchor href=#full-example>#</a>
 </h2>
-<p>You can change text of the link:
-<a href=sms:+447911123456>text me</a>
-</p>
+<p>With parameters you can override speed, theme, etc.</p>
+<script id=asciicast-AyrL49ZCvbvICGRmMT8Q9rz5B data-start-at=10 data-theme=monokai data-speed=3 data-loop=true data-autoplay=true data-cols=90 data-rows=10 src=https://asciinema.org/a/AyrL49ZCvbvICGRmMT8Q9rz5B.js async></script>
 <p>Code:</p>
-<pre tabindex=0><code>{{&lt; sms number=&quot;+447911123456&quot; &gt;}}text me{{&lt;/ sms &gt;}}
+<pre tabindex=0><code>{{&lt; asciicast
+    id=&quot;AyrL49ZCvbvICGRmMT8Q9rz5B&quot;
+    theme=&quot;monokai&quot;
+    startAt=&quot;10&quot;
+    speed=&quot;3&quot;
+    loop=true
+    autoplay=true
+    columns=&quot;90&quot;
+    rows=&quot;10&quot;
+    &gt;}}
 </code></pre><h2 id=parameters>
 Parameters
 <a class=anchor href=#parameters>#</a>
@@ -158,18 +167,77 @@ Parameters
 </thead>
 <tbody>
 <tr>
-<td><code>number</code></td>
+<td><code>id</code></td>
 <td>—</td>
-<td>The phone number to call. Consider using an international phone code, because the Internet is worldwide :)</td>
+<td>ID of your cast.</td>
 </tr>
 <tr>
-<td>inner text</td>
-<td><code>number</code> param value</td>
-<td>The text to show</td>
+<td><code>theme</code></td>
+<td>—</td>
+<td>One of available asciinema themes, full list you can find in <a href=https://asciinema.org/docs/embedding>asciinema docs</a>.</td>
+</tr>
+<tr>
+<td><code>startAt</code></td>
+<td><code>0</code></td>
+<td>The time at which the playback should start.</td>
+</tr>
+<tr>
+<td><code>speed</code></td>
+<td><code>1</code></td>
+<td>The speed of cast playback. <code>2</code> means 2 times faster.</td>
+</tr>
+<tr>
+<td><code>loop</code></td>
+<td><code>false</code></td>
+<td>If true, the cast will be played in a repeat mode.</td>
+</tr>
+<tr>
+<td><code>autoplay</code></td>
+<td><code>false</code></td>
+<td>If true, the cast will start automatically, else it will start only after click.</td>
+</tr>
+<tr>
+<td><code>preload</code></td>
+<td><code>true</code></td>
+<td>If true, the cast will be prefetched before user interaction.</td>
+</tr>
+<tr>
+<td><code>columns</code></td>
+<td>—</td>
+<td>The width of cast in symbols. If don’t passed, it will be equal the size of your terminal when you recorded the cast.</td>
+</tr>
+<tr>
+<td><code>rows</code></td>
+<td>—</td>
+<td>The height of cast in rows.</td>
 </tr>
 </tbody>
 </table>
-<h2 id=installation>
+<h2 id=site-parameters>
+Site Parameters
+<a class=anchor href=#site-parameters>#</a>
+</h2>
+<p>You can set defaults in Site Parameters. For <code>config.toml</code>:</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-toml data-lang=toml>[<span style=color:#a6e22e>params</span>.<span style=color:#a6e22e>HugoShortcodes</span>.<span style=color:#a6e22e>Asciicast</span>]
+    <span style=color:#a6e22e>Theme</span> = <span style=color:#e6db74>&#39;monokai&#39;</span>
+    <span style=color:#a6e22e>Speed</span> = <span style=color:#ae81ff>2</span>
+    <span style=color:#a6e22e>Loop</span> = <span style=color:#66d9ef>true</span>
+    <span style=color:#a6e22e>AutoPlay</span> = <span style=color:#66d9ef>true</span>
+    <span style=color:#a6e22e>Preload</span> = <span style=color:#66d9ef>true</span>
+    <span style=color:#a6e22e>Columns</span> = <span style=color:#ae81ff>80</span>
+    <span style=color:#a6e22e>Rows</span> = <span style=color:#ae81ff>25</span>
+</code></pre></div><p>For <code>config.yaml</code>:</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-yaml data-lang=yaml><span style=color:#f92672>params</span>:
+  <span style=color:#f92672>HugoShortcodes</span>:
+    <span style=color:#f92672>Asciicast</span>:
+      <span style=color:#f92672>Theme</span>: <span style=color:#e6db74>&#39;monokai&#39;</span>
+      <span style=color:#f92672>Speed</span>: <span style=color:#ae81ff>2</span>
+      <span style=color:#f92672>Loop</span>: <span style=color:#66d9ef>true</span>
+      <span style=color:#f92672>AutoPlay</span>: <span style=color:#66d9ef>true</span>
+      <span style=color:#f92672>Preload</span>: <span style=color:#66d9ef>true</span>
+      <span style=color:#f92672>Columns</span>: <span style=color:#ae81ff>80</span>
+      <span style=color:#f92672>Rows</span>: <span style=color:#ae81ff>25</span>
+</code></pre></div><h2 id=installation>
 Installation
 <a class=anchor href=#installation>#</a>
 </h2>
@@ -193,7 +261,7 @@ Installation
 <summary>Install only current shortcode</summary>
 <p>If you need only one shortcode or installing a theme is too complicated, you may get it easier.</p>
 <ul>
-<li>First, <a href=https://raw.githubusercontent.com/isqua/hugo-shortcodes/main/themes/hugo-shortcodes/layouts/shortcodes/sms.html download=sms.html>download shortcode file.</a></li>
+<li>First, <a href=https://raw.githubusercontent.com/isqua/hugo-shortcodes/main/themes/hugo-shortcodes/layouts/shortcodes/asciicast.html download=asciicast.html>download shortcode file.</a></li>
 <li>Put the file into your <code>layouts/shortcodes</code> folder.</li>
 </ul>
 <p>That’s it! If your hugo server is running, it is better to restart it to avoid unexpected behavior.</p>
@@ -204,7 +272,7 @@ Installation
 <footer class=book-footer>
 <div class="flex flex-wrap justify-between">
 <div>
-<a class="flex align-center" href=https://github.com/isqua/hugo-shortcodes/edit/main/content/links/sms/index.md target=_blank rel=noopener>
+<a class="flex align-center" href=https://github.com/isqua/hugo-shortcodes/edit/main/content/development/asciicast/index.md target=_blank rel=noopener>
 <img src=/hugo-shortcodes/svg/edit.svg class=book-icon alt=Edit>
 <span>Edit this page</span>
 </a>
@@ -222,6 +290,7 @@ Installation
 <li><a href=#minimal-example>Minimal example</a></li>
 <li><a href=#full-example>Full example</a></li>
 <li><a href=#parameters>Parameters</a></li>
+<li><a href=#site-parameters>Site Parameters</a></li>
 <li><a href=#installation>Installation</a></li>
 </ul>
 </nav>
